--- a/LiitBankAdminSystem/LiitBankAdminSystem.csproj
+++ b/LiitBankAdminSystem/LiitBankAdminSystem.csproj
@@ -17,4 +17,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="6.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Views\BankService\" />
+    <Folder Include="Views\Cashier\" />
+  </ItemGroup>
+
 </Project>
